--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
+dj-database-url==0.5.0
 Django==3.0.4
 django-extra-fields==2.0.3
 djangorestframework==3.11.0
@@ -13,6 +14,7 @@ google-auth==1.11.3
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
 grpcio==1.27.2
+gunicorn==20.0.4
 h5py==2.10.0
 idna==2.9
 image==1.5.28
@@ -28,6 +30,7 @@ opt-einsum==3.2.0
 pandas==1.0.3
 Pillow==7.0.0
 protobuf==3.11.3
+psycopg2==2.8.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.6
@@ -47,4 +50,5 @@ tensorflow-estimator==2.1.0
 termcolor==1.1.0
 urllib3==1.25.8
 Werkzeug==1.0.0
+whitenoise==5.0.1
 wrapt==1.12.1
