--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ astor==0.8.1
 cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
+cloudinary==1.20.0
 cycler==0.10.0
 dj-database-url==0.5.0
 Django==3.0.4
